--- a/index.html
+++ b/index.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>What's My Weather</title>
 </head>
+
 <body>
-    
+    <header class="p-4 mb-4 bg-primary text-white header">
+        <h1>Weather Dashboard</h1>
+    </header>
+
+    <main>
+        <section class="search-panel">
+            <div class="search-box">
+                <h3>Search for a City:</h3>
+                <form id="user-form">
+                    <div class="form-row align-items-center">
+                        <div class="col-8 search-field">
+                            <label class="sr-only" for="cityName">City</label>
+                            <input type="text" class="form-control" id="cityName" placeholder="City Name">
+                        </div>
+                        <div class="col-3 search-button-panel">
+                            <button type="submit" class="btn btn-primary" id="search-button">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
+
+        <section class="results-panel">
+            <div class="current-weather">
+                <div class="name-block">
+                    <h3 id="city-name"></h3>
+                </div>
+                <div>
+                    <p class="current-info" id="temperature"></p>
+                </div>
+                <div>
+                    <p class="current-info" id="wind"></p>
+                </div>
+            </div>
+             <div class="future-panel">
+                <h4>5 Days forcast</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-0"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text" id="temp-0"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 id="day-1"></h4>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text" id="temp-1"></p>
+                                </div>
+                            </div>
+                        </div>
+                         <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 id="day-2"></h4>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text" id="temp-2"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 id="day-3"></h4>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text" id="temp-3"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 id="day-4"></h4>
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text" id="temp-4"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
